# cartridges

./: .dockerignore  .gitignore  .template.env  alembic.ini  docker-compose.common.yml  docker-compose.local.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: local.yml  main.yml
dockerfiles/cartridges/: Dockerfile
migrations/: env.py
migrations/versions/: 2025_01_15_1713-d45d33e62359_initial.py  2025_01_16_1519-8fdca342e155_room_db_model_fix.py  2025_02_06_1931-5cc539387c21_table_users.py  2025_02_12_1704-d8d010020034_table_emplyees.py  2025_02_13_1104-7eed938ffe5f_tables_cartridge_eployee_vendors_devices.py  2025_02_14_1724-3e2b91639e1f_remove_employee_and_room_relationship.py  2025_09_17_2029-e31ae0b91c2f_cartridges_emloyees_modify.py  2025_09_17_2111-ccbe0ecf4813_emloyees_personnel_number_null.py  2025_09_17_2221-1bf8265fba47_type_model.py  2025_09_18_1211-89f134e16949_type_rename_to_model.py  2025_09_18_1713-5ee7811ec0cc_cartridge_model_column.py  2025_09_19_1512-9af17443eecc_model_rename_to_cartridgemodel.py
source/: config.py  data_factory.py  http_exceptions.py  http_exceptions_handler.py  logger_config.py  main.py  sa_exceptions_handler.py  smtp_exceptions_handler.py  types_custom.py  utils.py
source/apps/: backends.py  redis_client.py  user_manager.py  users.py  utils.py
source/db/: db.py
source/dependencies/: dependencies.py
source/repositories/: repositories.py  repository_interface.py  repository_sqla.py
source/schemas/: base.py  buildings.py  buildings_base.py  mixins.py  (+11 more)
tests/: conftest.py  test_openapijson.py  test_rooms.py
(+23 files in other folders)
