[project]
name = "cartridges"
version = "0.1.0"
description = ""
authors = [
    {name = "sorochinskii",email = "pika8oo@yandex.ru"}
]
license = {text = "The Unlicense"}
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "sqlalchemy (>=2.0.0, <3.0.0)",
    "psycopg2-binary",
    "alembic",
    "fastapi",
    "httpx",
    "loguru",
    "pydantic-settings",
    "python-dotenv",
    "uvicorn",
    "pytest-asyncio==0.23.8",
    "pytest==8.2.2",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.poetry]
packages = [
    { include = "source" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
